Bibliography fixes and balanced last page.

--- a/Kira.bib
+++ b/Kira.bib
@@ -220,7 +220,7 @@
 	Number = {3},
 	Pages = {1579},
 	Publisher = {IOP Publishing},
-	Title = {The sloan digital sky survey: Technical summary},
+	Title = {The {Sloan Digital Sky Survey: Technical} summary},
 	Volume = {120},
 	Year = {2000}}
 
@@ -230,7 +230,7 @@
 	Number = {2},
 	Pages = {543},
 	Publisher = {IOP Publishing},
-	Title = {The seventh data release of the Sloan Digital Sky Survey},
+	Title = {The seventh data release of the {Sloan Digital Sky Survey}},
 	Volume = {182},
 	Year = {2009}}
 
@@ -272,7 +272,7 @@
 @article{ivezic08,
 	Author = {Ivezic, Zeljko and Tyson, JA and Acosta, E and Allsman, R and Anderson, SF and Andrew, J and Angel, R and Axelrod, T and Barr, JD and Becker, AC and others},
 	Journal = {arXiv preprint arXiv:0805.2366},
-	Title = {{LSST}: from science drivers to reference design and anticipated data products},
+	Title = {{LSST}: {F}rom science drivers to reference design and anticipated data products},
 	Year = {2008}}
 
 @article{freeman14,
@@ -327,7 +327,7 @@
 	Author = {Zaharia, Matei and Chowdhury, Mosharaf and Franklin, Michael J and Shenker, Scott and Stoica, Ion},
 	Booktitle = {Proceedings of the USENIX Conference on Hot Topics in Cloud Computing (HotCloud '10)},
 	Pages = {10},
-	Title = {{S}park: cluster computing with working sets},
+	Title = {{S}park: {C}luster computing with working sets},
 	Year = {2010}}
 
 @inproceedings{shvachko10,
@@ -490,17 +490,8 @@ archivePrefix = "arXiv",
 
 @inproceedings{zaharia13,
  author = {Zaharia, Matei and Das, Tathagata and Li, Haoyuan and Hunter, Timothy and Shenker, Scott and Stoica, Ion},
- title = {Discretized Streams: Fault-tolerant Streaming Computation at Scale},
- booktitle = {Proceedings of the Twenty-Fourth ACM Symposium on Operating Systems Principles},
- series = {SOSP '13},
- year = {2013},
- isbn = {978-1-4503-2388-8},
- location = {Farminton, Pennsylvania},
- pages = {423--438},
- numpages = {16},
- url = {http://doi.acm.org/10.1145/2517349.2522737},
- doi = {10.1145/2517349.2522737},
- acmid = {2522737},
+ title = {Discretized Streams: {F}ault-tolerant Streaming Computation at Scale},
+ booktitle = {Proceedings of the ACM Symposium on Operating Systems Principles (SOSP '13)},
  publisher = {ACM},
  address = {New York, NY, USA},
 } 
